@@ -1,3 +1,8 @@
+2008-12-30  Jesse Jones  <jesjones@mindspring.com>
+
+	* Bitmask.cs: Changed GetHashCode to use unchecked
+	math.
+
 2008-12-28  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* Symbols.cs: Allow reports to include the source information when
